First commited as before_67273_rev1