@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2007, 2017 IBM Corporation and others.
+ * Copyright (c) 2007, 2015 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -9,7 +9,6 @@
  *     IBM Corporation - initial API and implementation
  *     Wang Yizhuo (wangyizhuo@gmail.com) - patch (see Bugzilla #239178)
  *     Simon Scholz <simon.scholz@vogella.com> - Bug 430205, 458055
- *     Ralf M Petter <ralf.petter@gmail.com> - Bug 510826
  *******************************************************************************/
 package org.eclipse.ui.internal.forms.widgets;
 
@@ -105,8 +104,8 @@ public class FormImages {
 		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
-			hash = hash * 7 + Integer.valueOf(fTheight).hashCode();
-			hash = hash * 7 + Integer.valueOf(fMarginHeight).hashCode();
+			hash = hash * 7 + new Integer(fTheight).hashCode();
+			hash = hash * 7 + new Integer(fMarginHeight).hashCode();
 			return hash;
 		}
 
@@ -173,7 +172,7 @@ public class FormImages {
 			int hash = super.hashCode();
 			hash = hash * 7 + Boolean.valueOf(fVertical).hashCode();
 			for (int fPercent : fPercents)
-				hash = hash * 7 + Integer.valueOf(fPercent).hashCode();
+				hash = hash * 7 + new Integer(fPercent).hashCode();
 			return hash;
 		}
 
@@ -262,8 +261,8 @@ public class FormImages {
 
 		@Override
 		public boolean equals(Object obj) {
-			if (obj instanceof SimpleSectionImageDescriptor) {
-				SimpleSectionImageDescriptor id = (SimpleSectionImageDescriptor) obj;
+			if (obj instanceof SimpleImageDescriptor) {
+				SimpleImageDescriptor id = (SimpleImageDescriptor) obj;
 				if (super.equals(obj) && id.fTheight == fTheight && id.fMarginHeight == fMarginHeight)
 					return true;
 			}
@@ -273,8 +272,8 @@ public class FormImages {
 		@Override
 		public int hashCode() {
 			int hash = super.hashCode();
-			hash = hash * 7 + Integer.valueOf(fTheight).hashCode();
-			hash = hash * 7 + Integer.valueOf(fMarginHeight).hashCode();
+			hash = hash * 7 + new Integer(fTheight).hashCode();
+			hash = hash * 7 + new Integer(fMarginHeight).hashCode();
 			return hash;
 		}
 
@@ -363,13 +362,13 @@ public class FormImages {
 	private synchronized Image getGradient(AbstractImageDescriptor desc, Display display) {
 		checkHashMaps();
 		Image result = manager.getResourceManager(display).createImage(desc);
-		descriptors.put(Integer.valueOf(result.hashCode()), desc);
+		descriptors.put(new Integer(result.hashCode()), desc);
 		return result;
 	}
 
 	public synchronized boolean markFinished(Image image, Display display) {
 		checkHashMaps();
-		Integer imageHashCode = Integer.valueOf(image.hashCode());
+		Integer imageHashCode = new Integer(image.hashCode());
 		AbstractImageDescriptor desc = descriptors.get(imageHashCode);
 		if (desc != null) {
 			LocalResourceManager resourceManager = manager.getResourceManager(display);
